[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="PreTextButton" type="Button" parent="."]
margin_left = 176.0
margin_top = 464.0
margin_right = 400.0
margin_bottom = 536.0
text = "Renderizar lista pre-definida"

[node name="UserTextButton" type="Button" parent="."]
margin_left = 648.0
margin_top = 464.0
margin_right = 872.0
margin_bottom = 536.0
text = "Renderizar lista preenchida"

[node name="Input3" type="LineEdit" parent="."]
margin_left = 728.0
margin_top = 168.0
margin_right = 960.0
margin_bottom = 264.0

[node name="Input1" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 168.0
margin_right = 320.0
margin_bottom = 264.0

[node name="Input2" type="LineEdit" parent="."]
margin_left = 408.0
margin_top = 168.0
margin_right = 640.0
margin_bottom = 264.0

[node name="Label1" type="Label" parent="."]
margin_left = 88.0
margin_top = 120.0
margin_right = 320.0
margin_bottom = 158.0
text = "Dado preenchido 1"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 408.0
margin_top = 120.0
margin_right = 638.0
margin_bottom = 158.0
text = "Dado preenchido 1"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = 728.0
margin_top = 120.0
margin_right = 961.0
margin_bottom = 158.0
text = "Dado preenchido 1"
align = 1

[node name="UserRect" type="ColorRect" parent="."]
margin_left = 552.0
margin_top = 304.0
margin_right = 960.0
margin_bottom = 464.0

[node name="UserTextLabel" type="RichTextLabel" parent="UserRect"]
margin_left = 8.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 152.0
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="PreDefRect" type="ColorRect" parent="."]
margin_left = 88.0
margin_top = 304.0
margin_right = 496.0
margin_bottom = 464.0

[node name="PreDefTextLabel" type="RichTextLabel" parent="PreDefRect"]
margin_left = 8.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 152.0
custom_colors/default_color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="PreTextButton" to="." method="_on_PreTextButton_pressed"]
[connection signal="pressed" from="UserTextButton" to="." method="_on_UserTextButton_pressed"]
